--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../phonebook && npm run build && @powershell Copy-Item build -Recurse ../phonebook_backend",
     "deploy": "flyctl deploy",
-    "deploy:full": "npm run build:ui && npm run deploy", 
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "flyctl logs"
   },
   "author": "Gregory Diehl",
@@ -22,6 +23,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.22"
   }
 }
